syntax = "proto3";

package api.fileupload.v1;

option go_package = "github.com/mrdan4es/sandbox/api/fileuploadpb/v1;fileuploadpb";

service FileUploadService {
    rpc UploadUpdateFile(stream UploadUpdateFileRequest) returns (UploadUpdateFileResponse) {};
}

message UploadUpdateFileRequest {
    oneof data {
        string file_name = 1;
        bytes chunk_data = 2;
    }
}

message UploadUpdateFileResponse {}

